--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head prefix=”og:http://ogp.me/ns#”>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/png" href="/favicon.png">
-    <link rel="apple-touch-icon" href="/favicon.png">
+    <link rel="apple-touch-icon" href="/touch_icon.png">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>ToBe</title>
 
