--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="icon" type="image/png" href="/favicon.png">
     <link rel="apple-touch-icon" href="/touch_icon.png">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Stask</title>
+    <title>tobe</title>
 
     <meta property="og:url" content="https://tobe.ampoi.net" />
     <meta property="og:type" content="website" />
